platform/runtime/staging/import_legacy/latest/exam_integration/latest/repository_root/runtime/traces/probe.exams-curated-exam00-v1.exams-exam00-ft_mod/user.out.build.stderr
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/exam_integration/latest/repository_root/runtime/workspaces/probe.exams-curated-exam00-v1.exams-exam00-ft_mod/submission/ft_mod.c: In function 'ft_mod':
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/exam_integration/latest/repository_root/runtime/workspaces/probe.exams-curated-exam00-v1.exams-exam00-ft_mod/submission/ft_mod.c:4:16: error: 'return' with a value, in function returning void [-Werror=return-type]
    4 |         return 1;
      |                ^
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/exam_integration/latest/repository_root/runtime/workspaces/probe.exams-curated-exam00-v1.exams-exam00-ft_mod/submission/ft_mod.c:1:6: note: declared here
    1 | void ft_mod(int n1, int n2)
      |      ^~~~~~
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/exam_integration/latest/repository_root/runtime/workspaces/probe.exams-curated-exam00-v1.exams-exam00-ft_mod/submission/ft_mod.c:5:16: error: 'return' with a value, in function returning void [-Werror=return-type]
    5 |     return (n1 % n2);
      |            ~~~~^~~~~
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/exam_integration/latest/repository_root/runtime/workspaces/probe.exams-curated-exam00-v1.exams-exam00-ft_mod/submission/ft_mod.c:1:6: note: declared here
    1 | void ft_mod(int n1, int n2)
      |      ^~~~~~
cc1: all warnings being treated as errors
